--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.d
 
 # Compiled Object files
+obj/
 *.slo
 *.lo
 *.o
@@ -31,6 +32,7 @@
 *.lib
 
 # Executables
+bin/
 *.exe
 *.out
 *.app
@@ -69,12 +71,7 @@ Temporary Items
 *.icloud
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+.vscode/
 
 # Local History for Visual Studio Code
 .history/
